--- a/index.html
+++ b/index.html
@@ -1,79 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Fusion Registration</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: sans-serif; padding: 20px; background-color: #f4f4f4; }
-        .container { max-width: 400px; margin: 0 auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-        h2 { text-align: center; }
-        input { width: 100%; padding: 10px; margin-top: 10px; border: 1px solid #ccc; border-radius: 5px; }
-        button { width: 100%; padding: 10px; background: #007bff; color: white; border: none; border-radius: 5px; margin-top: 20px; }
-        .hidden { display: none; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Fusion Registration</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f1f3f6;
+    }
+    .container {
+      max-width: 420px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .header h2 {
+      margin: 0;
+      font-size: 1.6rem;
+      color: #333;
+    }
+    .progress-bar {
+      height: 6px;
+      width: 100%;
+      background-color: #e0e0e0;
+      border-radius: 5px;
+      overflow: hidden;
+      margin-bottom: 25px;
+    }
+    .progress {
+      height: 100%;
+      width: 50%;
+      background-color: #007bff;
+      transition: width 0.3s ease;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin-top: 15px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+    button {
+      margin-top: 25px;
+      width: 100%;
+      padding: 12px;
+      background-color: #007bff;
+      color: white;
+      font-size: 1rem;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .hidden {
+      display: none;
+    }
+    .error {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
-    <h2>Fusion Registration</h2>
+  <div class="header">
+    <h2 id="formTitle">Personal Info</h2>
+  </div>
+  <div class="progress-bar">
+    <div class="progress" id="progress"></div>
+  </div>
 
-    <div id="step1">
-        <input type="text" id="firstName" placeholder="First Name" required />
-        <input type="text" id="surname" placeholder="Surname" required />
-        <input type="text" id="phone" placeholder="Phone Number" required />
-        <input type="text" id="bvn" placeholder="BVN" required />
-        <button onclick="nextStep()">Next</button>
-    </div>
+  <div id="step1">
+    <input type="text" id="firstName" placeholder="First Name" required />
+    <input type="text" id="surname" placeholder="Surname" required />
+    <input type="text" id="phone" placeholder="Phone Number" required />
+    <input type="text" id="bvn" placeholder="BVN" required />
+    <div class="error" id="step1Error"></div>
+    <button onclick="nextStep()">Next</button>
+  </div>
 
-    <div id="step2" class="hidden">
-        <input type="password" id="pin" placeholder="Enter 4-digit PIN" maxlength="4" required />
-        <input type="password" id="confirmPin" placeholder="Retype PIN" maxlength="4" required />
-        <button onclick="submitForm()">Sign Up</button>
-    </div>
+  <div id="step2" class="hidden">
+    <input type="password" id="pin" placeholder="Enter 4-digit PIN" maxlength="4" required />
+    <input type="password" id="confirmPin" placeholder="Retype PIN" maxlength="4" required />
+    <div class="error" id="step2Error"></div>
+    <button onclick="prevStep()">Back</button>
+    <button onclick="submitForm()">Sign Up</button>
+  </div>
 
-    <div id="message"></div>
+  <div id="message"></div>
 </div>
 
 <script>
-    let tg = window.Telegram.WebApp;
-    tg.expand();
+  let tg = window.Telegram.WebApp;
+  tg.expand();
 
-    function nextStep() {
-        document.getElementById("step1").classList.add("hidden");
-        document.getElementById("step2").classList.remove("hidden");
+  function nextStep() {
+    const firstName = document.getElementById("firstName").value;
+    const surname = document.getElementById("surname").value;
+    const phone = document.getElementById("phone").value;
+    const bvn = document.getElementById("bvn").value;
+
+    if (!firstName || !surname || !phone || !bvn) {
+      document.getElementById("step1Error").innerText = "Please fill all fields.";
+      return;
     }
 
-    async function submitForm() {
-        const firstName = document.getElementById("firstName").value;
-        const surname = document.getElementById("surname").value;
-        const phone = document.getElementById("phone").value;
-        const bvn = document.getElementById("bvn").value;
-        const pin = document.getElementById("pin").value;
-        const confirmPin = document.getElementById("confirmPin").value;
-        const telegramUsername = tg.initDataUnsafe?.user?.username || "unknown";
+    document.getElementById("step1Error").innerText = "";
+    document.getElementById("step1").classList.add("hidden");
+    document.getElementById("step2").classList.remove("hidden");
+    document.getElementById("formTitle").innerText = "Set Transaction PIN";
+    document.getElementById("progress").style.width = "100%";
+  }
 
-        if (pin !== confirmPin) {
-            alert("PINs do not match.");
-            return;
-        }
+  function prevStep() {
+    document.getElementById("step2").classList.add("hidden");
+    document.getElementById("step1").classList.remove("hidden");
+    document.getElementById("formTitle").innerText = "Personal Info";
+    document.getElementById("progress").style.width = "50%";
+  }
 
-        const response = await fetch("https://your-api-url.com/register", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                first_name: firstName,
-                surname: surname,
-                phone: phone,
-                bvn: bvn,
-                telegram_username: telegramUsername,
-                pin: pin
-            })
-        });
+  async function submitForm() {
+    const firstName = document.getElementById("firstName").value;
+    const surname = document.getElementById("surname").value;
+    const phone = document.getElementById("phone").value;
+    const bvn = document.getElementById("bvn").value;
+    const pin = document.getElementById("pin").value;
+    const confirmPin = document.getElementById("confirmPin").value;
+    const username = tg.initDataUnsafe?.user?.username || "unknown";
 
-        const result = await response.json();
-        document.getElementById("step2").classList.add("hidden");
-        document.getElementById("message").innerText = result.message || "Registered successfully!";
+    if (!pin || pin.length !== 4 || pin !== confirmPin) {
+      document.getElementById("step2Error").innerText = "PINs must match and be 4 digits.";
+      return;
     }
+
+    const res = await fetch("https://your-api-url.com/register", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        first_name: firstName,
+        surname: surname,
+        phone: phone,
+        bvn: bvn,
+        telegram_username: username,
+        pin: pin
+      })
+    });
+
+    const result = await res.json();
+    document.getElementById("step2").classList.add("hidden");
+    document.getElementById("message").innerText = result.message || "Registered successfully!";
+  }
 </script>
 </body>
 </html>
