--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       return;
     }
 
-    const res = await fetch("https://your-api-url.com/register", {
+    const res = await fetch("https://e73c0dce3be9.ngrok-free.app/register", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
